[REPLACE] icon play on the home page. [FIX] photo-item on mobile

--- a/src/project/product-list/styles/hero.pcss
+++ b/src/project/product-list/styles/hero.pcss
@@ -100,33 +100,33 @@
   height: 50px;
   margin: 0 auto;
 
+  text-align: center;
+
   background-color: $color__green;
 
   @media(--mobile){
     height: 100px;
   }
   &__logo{
-    position: absolute;
-    top:-45px;
-    left: 50%;
+    position: relative;
 
-    margin-left:-70px;
+    display: inline-block;
+
+    padding-top: 8px;
 
     color: $color__white;
 
-    font-size: 140px;
+    font-size: 32px;
 
     @media(--mobile){
-      top: -75px;
+      padding-top: 18px;
 
-      margin-left: -125px;
-
-      font-size: 250px;
+      font-size: 60px;
     }
     &-apostrophe{
       position: absolute;
       top: 10px;
-      left: calc(50% + 70px);
+      right: -16px;
 
       background: url(/static/img/logo-icon-tail.svg) no-repeat;
       background-size: 15px;
@@ -134,7 +134,7 @@
       size: 15px;
       @media(--mobile){
         top: 20px;
-        left: calc(50% + 130px);
+        right: -32px;
 
         background-size: 30px;
 
